// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default component 1`] = `
<header
  class="flex-header"
>
  <div
    class="flex-fill"
  />
</header>
`;

exports[`should render a header with all content 1`] = `
<header
  class="flex-header"
>
  <div
    class="flex-end"
  >
    <div>
      start content
    </div>
  </div>
  <div
    class="flex-fill"
  >
    <div
      class="title-container"
    >
      <h1
        class="title"
      >
        Title
      </h1>
    </div>
  </div>
  <div
    class="flex-end"
  >
    <div>
      end content
    </div>
  </div>
</header>
`;

exports[`should render a header with content on the left 1`] = `
<header
  class="flex-header"
>
  <div
    class="flex-end"
  >
    <div>
      start content
    </div>
  </div>
  <div
    class="flex-fill"
  />
</header>
`;

exports[`should render a header with content on the right 1`] = `
<header
  class="flex-header"
>
  <div
    class="flex-fill"
  />
  <div
    class="flex-end"
  >
    <div>
      end content
    </div>
  </div>
</header>
`;

exports[`should render a header with default heading level when level not set 1`] = `
<header
  class="flex-header"
>
  <div
    class="flex-fill"
  >
    <div
      class="title-container"
    >
      <h1
        class="title"
      >
        This title should render with a default level
      </h1>
    </div>
  </div>
</header>
`;

exports[`should render a header with hyperlink title 1`] = `
<header
  className="flex-header"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <div
    className="flex-fill"
  >
    <div
      className="title-container"
    >
      <h1
        className="title"
      >
        <InjectIntl(Hyperlink)
          onClick={[MockFunction]}
          text="Title"
        />
      </h1>
    </div>
  </div>
</header>
`;

exports[`should render a header with title and heading level 1`] = `
<header
  class="flex-header"
>
  <div
    class="flex-fill"
  >
    <div
      class="title-container"
    >
      <h1
        class="title"
        id="test-id"
      >
        title
      </h1>
    </div>
  </div>
</header>
`;

exports[`should render a subheader with all content 1`] = `
<header
  class="flex-header subheader"
>
  <div
    class="flex-end"
  >
    <div>
      start content
    </div>
  </div>
  <div
    class="flex-fill"
  >
    <div
      class="title-container"
    >
      <h1
        class="title"
      >
        Title
      </h1>
    </div>
  </div>
  <div
    class="flex-end"
  >
    <div>
      end content
    </div>
  </div>
</header>
`;

exports[`should render a subheader with title and heading level 1`] = `
<header
  class="flex-header subheader"
>
  <div
    class="flex-fill"
  >
    <div
      class="title-container"
    >
      <h1
        class="title"
      >
        title
      </h1>
    </div>
  </div>
</header>
`;
